--- a/package.json
+++ b/package.json
@@ -13,13 +13,18 @@
   "author": "Your Company Name",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.0",
+    "morgan": "^1.10.1",
     "pg": "^8.8.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^4.17.15",
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/morgan": "^1.9.10",
     "@types/node": "^20.4.2",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
