--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.1",
+    "next": "^15.4.5",
     "pg": "^8.8.0"
   },
   "devDependencies": {
