--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "pg": "^8.8.0"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.4",
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.15",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/morgan": "^1.9.10",
     "@types/node": "^20.4.2",
+    "@types/react": "^19.1.9",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
     "eslint": "^8.20.0",
