--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,11 +8,7 @@
     "forceConsistentCasingInFileNames": true,
     "outDir": "dist",
     "rootDir": "src",
-    "jsx": "react-jsx",
-    "baseUrl": "./",
-    "paths": {
-      "components/*": ["src/components/*"]
-    }
+    "jsx": "react-jsx"
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
